add scroll behavior to setup and main screens

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,8 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <data />
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -27,146 +25,188 @@
             app:layout_constraintStart_toStartOf="@id/texture_view"
             app:layout_constraintTop_toTopOf="@id/texture_view" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <ScrollView
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin_half"
-            android:background="@color/colorAccentLight"
-            android:padding="12dp"
-            app:layout_constraintBottom_toTopOf="@id/constraint_measurements"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/texture_view"
-            app:layout_constraintVertical_bias="1"
-            app:layout_constraintWidth_percent="0.4">
-
-            <TextView
-                android:id="@+id/txt_result_1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin_half"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@id/txt_result_2"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="Zebra" />
-
-            <TextView
-                android:id="@+id/txt_result_2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin_half"
-                android:layout_marginTop="@dimen/margin_small"
-                app:layout_constraintBottom_toTopOf="@id/txt_result_3"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/txt_result_1"
-                tools:text="23.5" />
-
-            <TextView
-                android:id="@+id/txt_result_3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin_half"
-                android:layout_marginTop="@dimen/margin_small"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/txt_result_2"
-                tools:text="23.5" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/constraint_measurements"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin_half"
-            android:background="@color/colorAccentLight"
-            android:padding="12dp"
+            android:layout_height="0dp"
+            android:background="@color/grayLight"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_percent="0.3"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/texture_view"
-            app:layout_constraintVertical_bias="1">
+            app:layout_constraintTop_toBottomOf="@id/texture_view">
 
-            <TextView
-                android:id="@+id/txt_inference_average_label"
-                android:layout_width="0dp"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/detection_inference_time_average"
-                app:layout_constraintEnd_toStartOf="@id/txt_inference_average"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:paddingHorizontal="@dimen/margin_half">
 
-            <TextView
-                android:id="@+id/txt_inference_average"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="@id/txt_inference_average_label"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/txt_inference_average_label"
-                app:layout_constraintTop_toTopOf="@id/txt_inference_average_label"
-                tools:text="150 ms" />
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/card_detections"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/margin_small"
+                    app:cardCornerRadius="4dp"
+                    app:layout_constraintBottom_toTopOf="@id/card_measurements"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintWidth_percent="0.4">
 
-            <TextView
-                android:id="@+id/txt_inference_last_label"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_small"
-                android:text="@string/detection_inference_time_last"
-                app:layout_constraintEnd_toStartOf="@id/txt_inference_last"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/txt_inference_average_label" />
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="@dimen/margin_small"
+                        android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/txt_inference_last"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="@id/txt_inference_last_label"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/txt_inference_last_label"
-                app:layout_constraintTop_toTopOf="@id/txt_inference_last_label"
-                tools:text="132 ms" />
+                        <TextView
+                            android:id="@+id/txt_result_1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textStyle="bold"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            tools:text="Zebra" />
 
-            <TextView
-                android:id="@+id/txt_image_size_average_label"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_small"
-                android:text="@string/detection_image_size_average"
-                app:layout_constraintEnd_toStartOf="@id/txt_inference_last"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/txt_inference_last_label" />
+                        <TextView
+                            android:id="@+id/txt_result_2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="6dp"
+                            app:layout_constraintStart_toStartOf="@id/txt_result_1"
+                            app:layout_constraintTop_toBottomOf="@id/txt_result_1"
+                            tools:text="Pony" />
 
-            <TextView
-                android:id="@+id/txt_image_size_average"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="@id/txt_image_size_average_label"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/txt_image_size_average_label"
-                app:layout_constraintTop_toTopOf="@id/txt_image_size_average_label"
-                tools:text="536 Kb" />
+                        <TextView
+                            android:id="@+id/txt_result_3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="6dp"
+                            app:layout_constraintStart_toStartOf="@id/txt_result_1"
+                            app:layout_constraintTop_toBottomOf="@id/txt_result_2"
+                            tools:text="Horse" />
 
-            <TextView
-                android:id="@+id/txt_last_image_size_label"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_small"
-                android:text="@string/detection_image_size_last"
-                app:layout_constraintEnd_toStartOf="@id/txt_inference_last"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/txt_image_size_average_label" />
+                        <TextView
+                            android:id="@+id/txt_no_detections"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/detection_empty_result"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            tools:visibility="gone" />
 
-            <TextView
-                android:id="@+id/txt_last_image_size"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="@id/txt_last_image_size_label"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/txt_last_image_size_label"
-                app:layout_constraintTop_toTopOf="@id/txt_last_image_size_label"
-                tools:text="536 Kb" />
+                    </androidx.constraintlayout.widget.ConstraintLayout>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/card_measurements"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_marginTop="@dimen/margin_small"
+                    android:layout_marginBottom="@dimen/margin_small"
+                    app:cardCornerRadius="4dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHeight="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/card_detections">
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_margin="@dimen/margin_small"
+                        android:layout_marginBottom="@dimen/margin_small"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent">
+
+                        <TextView
+                            android:id="@+id/txt_inference_average_label"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:text="@string/detection_inference_time_average"
+                            app:layout_constraintEnd_toStartOf="@id/txt_inference_average"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <TextView
+                            android:id="@+id/txt_inference_average"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:layout_constraintBottom_toBottomOf="@id/txt_inference_average_label"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toEndOf="@id/txt_inference_average_label"
+                            app:layout_constraintTop_toTopOf="@id/txt_inference_average_label"
+                            tools:text="150 ms" />
+
+                        <TextView
+                            android:id="@+id/txt_inference_last_label"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/margin_small"
+                            android:text="@string/detection_inference_time_last"
+                            app:layout_constraintEnd_toStartOf="@id/txt_inference_last"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/txt_inference_average_label" />
+
+                        <TextView
+                            android:id="@+id/txt_inference_last"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:layout_constraintBottom_toBottomOf="@id/txt_inference_last_label"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toEndOf="@id/txt_inference_last_label"
+                            app:layout_constraintTop_toTopOf="@id/txt_inference_last_label"
+                            tools:text="132 ms" />
+
+                        <TextView
+                            android:id="@+id/txt_image_size_average_label"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/margin_small"
+                            android:text="@string/detection_image_size_average"
+                            app:layout_constraintEnd_toStartOf="@id/txt_inference_last"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/txt_inference_last_label" />
+
+                        <TextView
+                            android:id="@+id/txt_image_size_average"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:layout_constraintBottom_toBottomOf="@id/txt_image_size_average_label"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toEndOf="@id/txt_image_size_average_label"
+                            app:layout_constraintTop_toTopOf="@id/txt_image_size_average_label"
+                            tools:text="536 Kb" />
+
+                        <TextView
+                            android:id="@+id/txt_last_image_size_label"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/margin_small"
+                            android:text="@string/detection_image_size_last"
+                            app:layout_constraintEnd_toStartOf="@id/txt_inference_last"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/txt_image_size_average_label" />
+
+                        <TextView
+                            android:id="@+id/txt_last_image_size"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:layout_constraintBottom_toBottomOf="@id/txt_last_image_size_label"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toEndOf="@id/txt_last_image_size_label"
+                            app:layout_constraintTop_toTopOf="@id/txt_last_image_size_label"
+                            tools:text="536 Kb" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                </androidx.cardview.widget.CardView>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </ScrollView>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab_camera"
