--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -50,4 +50,10 @@
         <item name="android:background">@drawable/ripple_btn_secondary</item>
     </style>
 
+    <style name="CardView.Detections">
+        <item name="cardCornerRadius">4dp</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">0dp</item>
+    </style>
+
 </resources>
