--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,17 @@
             app:layout_constraintStart_toStartOf="@id/texture_view"
             app:layout_constraintTop_toTopOf="@id/texture_view" />
 
+        <ImageView
+            android:id="@+id/img_info"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:padding="@dimen/margin_small"
+            app:layout_constraintBottom_toBottomOf="@id/texture_view"
+            app:layout_constraintEnd_toEndOf="@id/texture_view"
+            app:srcCompat="@drawable/ic_info"
+            app:tint="@color/white"
+            tools:ignore="ContentDescription" />
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -74,7 +85,8 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/txt_detections_label" />
+                        app:layout_constraintTop_toBottomOf="@id/txt_detections_label"
+                        tools:listitem="@layout/item_detection" />
 
                     <TextView
                         android:id="@+id/txt_no_detections"
