--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -42,18 +42,23 @@
         <item name="android:paddingBottom">16dp</item>
     </style>
 
-    <style name="SecondaryButtonStyle">
-        <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textAlignment">center</item>
-        <item name="android:padding">12dp</item>
-        <item name="android:background">@drawable/ripple_btn_secondary</item>
-    </style>
-
     <style name="CardView.Detections">
-        <item name="cardCornerRadius">4dp</item>
+        <item name="cardCornerRadius">@dimen/card_corner_radius</item>
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">0dp</item>
+        <item name="cardElevation">4dp</item>
+    </style>
+
+    <style name="SettingsInfoLabel">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">@dimen/margin_small</item>
+    </style>
+
+    <style name="SettingsInfoDialog" parent="Theme.AppCompat.Light.Dialog">
+        <item name="android:windowMinWidthMajor">90%</item>
+        <item name="android:windowMinWidthMinor">90%</item>
+        <item name="android:windowBackground">@drawable/bg_dialog_info</item>
     </style>
 
 </resources>
